refactor: collect immutable list